feat: add information and change styles

--- a/index.html
+++ b/index.html
@@ -12,24 +12,31 @@
       <h1>Evgenia Fedorova</h1>
       <img class="photo" src="photo.jpg" alt="Evgenia" />
       <h2>Contacts</h2>
-      <ul>
-        <li class="has-line-data">
+      <ul class="contacts">
+        <li class="contacts__item">
           <strong>Location:</strong> Saint-Petersburg, Russia
         </li>
-        <li class="has-line-data">
+        <li class="contacts__item">
           <strong>GitHub:</strong>
           <a href="https://github.com/EvgeniaLeleo " target="_blank"
             >EvgeniaLeleo</a
           >
         </li>
-        <li class="has-line-data">
+        <li class="contacts__item">
           <strong>Discord:</strong> EvgeniaLeleo#4614
         </li>
-        <li class="has-line-data">
+        <li class="contacts__item">
           <strong>Codewars:</strong>
           <a href="https://www.codewars.com/users/EvgeniaLeleo" target="_blank"
-            >EvgeniaLeleo</a
-          >
+            >EvgeniaLeleo
+          </a>
+          <a href="https://www.codewars.com/users/EvgeniaLeleo" target="_blank">
+            <img
+              class="codewars-badge"
+              src="https://www.codewars.com/users/EvgeniaLeleo/badges/micro"
+              alt="codewars badge"
+            />
+          </a>
         </li>
       </ul>
 
@@ -40,27 +47,25 @@
         graduated from graduate school at the same faculty.
       </p>
       <p class="has-line-data">
-        I’ve been working at St. Petersburg Technological University of
-        Industrial Technologies and Design, Higher School of Technology and
-        Energy, at the Department of Higher Mathematics since 2007.
+        I've been working at Saint Petersburg State University of Industrial
+        Technologies and Design, Higher School of Technology and Energy, at the
+        Department of Higher Mathematics since 2007.
       </p>
       <p class="has-line-data">
-        I’m a senior lecturer and I teach higher mathematics 1st and 2nd year
+        I'm a senior lecturer and I teach higher mathematics 1st and 2nd year
         students.
       </p>
       <p class="has-line-data">
-        I am the author of four methodological works and five scientific papers
-        in the field of local qualitative theory of ordinary differential
-        equations.
+        I am the author of 4 methodological works and 5 scientific papers in the
+        field of local qualitative theory of ordinary differential equations.
       </p>
       <p class="has-line-data">
-        I want to change my profession and try something new.<br />
-        In the future, I see myself as a confident and experienced Frontend
-        developer, a sought-after specialist in my field. I want to broaden my
-        horizons and grow professionally, work with well-qualified specialists
-        and find out something new and useful every day.<br />
-        I’m used to constantly evolvilng and achieving my goals. And I’m sure I
-        can do that.
+        I want to change my profession and try something new. In the future, I
+        see myself as a confident and experienced Front-end developer, a
+        sought-after specialist in my field. I want to broaden my horizons and
+        grow professionally, work with well-qualified specialists and find out
+        something new and useful every day. I constantly evolve and achieve my
+        goals. And I'm sure I can do that.
       </p>
       <h2>Skills</h2>
       <ul>
@@ -132,6 +137,10 @@
       <ul>
         <li class="has-line-data">
           <strong>JavaScript/Front-end course. Stage 1</strong> at
+          <a href="https://rs.school/" target="_blank">Rolling Scopes school</a>
+        </li>
+        <li class="has-line-data">
+          <strong>JavaScript/Front-end course. Stage 2</strong> at
           <a href="https://rs.school/" target="_blank">Rolling Scopes school</a>
           (in progress)
         </li>
