refactor: update information and change styles

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>CV#2</title>
   </head>
   <body>
-    <section class="center">
+    <header class="header center">
       <h1>Evgenia Fedorova</h1>
-      <img class="photo" src="photo.jpg" alt="Evgenia" />
+      <img class="photo" src="photo.jpg" alt="Evgenia Fedorova" />
+    </header>
+
+    <section class="center">
       <h2>Contacts</h2>
       <ul class="contacts">
         <li class="contacts__item">
@@ -39,7 +42,9 @@
           </a>
         </li>
       </ul>
+    </section>
 
+    <section class="center">
       <h2>About Me</h2>
       <p class="has-line-data">
         I graduated from St. Petersburg State University, Faculty of Mathematics
@@ -76,7 +81,9 @@
         <li class="has-line-data">LaTeX</li>
         <li class="has-line-data">Python (basic knowledge)</li>
       </ul>
+    </section>
 
+    <section class="center">
       <h2>Code Example</h2>
       <p class="has-line-data">
         <strong>Snail Sort from CODEWARS:</strong>
@@ -132,6 +139,13 @@
     };
     
     </code></pre>
+    </section>
+
+    <section class="center">
+      <h2>My projects</h2>
+      <ul>
+        <a href="https://leleo-cards-game.netlify.app/">Memory card game</a>
+      </ul>
 
       <h2>Courses</h2>
       <ul>
@@ -145,19 +159,19 @@
           (in progress)
         </li>
         <li class="has-line-data">
+          <strong>Web developer</strong> at
+          <a href="https://sky.pro/courses/programming/frontend" target="_blank"
+            >SkyPro Online University</a
+          >
+          (in progress)
+        </li>
+        </li>
+        <li class="has-line-data">
           <strong>JavaScript Manual</strong> on
           <a href="https://learn.javascript.ru" target="_blank"
             >learn.javascript.ru</a
           >
           (in progress)
-        </li>
-        <li class="has-line-data">
-          <strong>Web developer</strong> on
-          <a href="https://sky.pro/courses/programming/frontend" target="_blank"
-            >SkyPro</a
-          >
-          (in progress)
-        </li>
         <li class="has-line-data">
           <strong>
             Build Responsive Real-World Websites with HTML and CSS
@@ -226,7 +240,9 @@
           />
         </li>
       </ul>
+    </section>
 
+    <section class="center">
       <h2>Languages</h2>
       <ul>
         <li class="has-line-data"><strong>Russian</strong> - Native</li>
