refactor: update information

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         something new and useful every day. I constantly evolve and achieve my
         goals. And I'm sure I can do that.
       </p>
+    </section>
+
+    <section class="center">
       <h2>Skills</h2>
       <ul>
         <li class="has-line-data">HTML5</li>
@@ -144,9 +147,28 @@
     <section class="center">
       <h2>My projects</h2>
       <ul>
-        <a href="https://leleo-cards-game.netlify.app/">Memory card game</a>
+        <li>
+          <a href="https://leleo-cards-game.netlify.app/" target="_blank"
+            >Memory card game</a
+          >
+          <br />
+          <a href="https://leleo-cards-game.netlify.app/" target="_blank">
+            <img class="preview" src="./memory.png" alt="Memory card game" />
+          </a>
+        </li>
+        <li>
+          <a href="https://virual-keyboard.netlify.app/" target="_blank"
+            >Virtual keyboard</a
+          >
+          <br />
+          <a href="https://virual-keyboard.netlify.app/" target="_blank">
+            <img class="preview" src="./keyboard.png" alt="Virtual keyboard" />
+          </a>
+        </li>
       </ul>
+    </section>
 
+    <section class="center">
       <h2>Courses</h2>
       <ul>
         <li class="has-line-data">
@@ -165,13 +187,13 @@
           >
           (in progress)
         </li>
-        </li>
         <li class="has-line-data">
           <strong>JavaScript Manual</strong> on
           <a href="https://learn.javascript.ru" target="_blank"
             >learn.javascript.ru</a
           >
           (in progress)
+        </li>
         <li class="has-line-data">
           <strong>
             Build Responsive Real-World Websites with HTML and CSS
