refactor: add certificate link

--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
           >
           (online test at
           <a href="https://www.efset.org/" target="_blank">www.efset.org</a>)
+          <br /><a href="https://www.efset.org/cert/1CNTmc"
+            >View certificate ▶️</a
+          >
         </li>
       </ul>
     </section>
